Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.9.0
Description
AuthManager::Init() is not idempotent. This generally isn't a problem since we call it only once per daemon, however, if we want to test with different security configurations as a part of the BE tests, this causes unnecessary failures.
This is because we use a global variable to track the completion of the kerberos environment setup which shouldn't be the case since we would want to re-setup the environment if we call AuthManager::Init() with a different configuration.