IMPALA-5041: Allow AuthManager::Init() to be called more than once

We use a global variable to track the completion of the
kerberos environment setup which shouldn't be the case since
we would want to re-setup the environment if we call
AuthManager::Init() with a different configuration. Currently, if
we call it again, some of our new configuration get applied,
whereas some don't.

Also, the global variable 'env_setup_complete_' was used so that
we don't set the environment twice (once for internal transport and
once for external). This patch ensures that it's still the case.

Change-Id: I12cc210aa422f077446ea728ebf76921351417b0
Reviewed-on: http://gerrit.cloudera.org:8080/6333
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Impala Public Jenkins